@@ -30,6 +30,7 @@ Cacti CHANGELOG
 -bug#0001281: ICMP Ping fails if an octet == 255
 -bug#0001286: poller_item cache is not updated when "Data Input Method" is changed 
 -bug#0001288: A host with ICMP ping selected as method does not properly perform ping
+-bug#0001291: Reapply Suggested Names fails on Script Queries
 -bug: Host save failed in FireFox 3 for non-SNMP V3 hosts, complaining about "password mismatch"
 -bug: remove graph permissions if graph is removed
 -bug: remove host permissions if host is removed
